2004-07-27  Will Duquette  <will@wjduquette.com>

	* snit.man      Updated the manpage to describe the new "pragma"
	                statement.  Also, changed the SNIT acronym in the
	                title to "Simple Now In Tcl", i.e., objects are
	                now simple.

2004-07-26  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Implemented -configuremethod and configure command
	* snit.test     caching; added tests to ensure that the cache is
	* roadmap.txt   cleared when necessary.  Implemented -validatemethod
	* dictionary    and added tests.  Implemented -readonly and added
	* README.txt    tests.

	* snit.man      Updated the man page with the new option
			definition syntax.

	* snit.tcl      Added the "pragma" statement, and three pragma
	* snit.test     options, -hastypeinfo, -hastypedestroy, and
	* roadmap.txt   -hasinstances, plus related tests.  It still
	* dictionary    needs to be documented.

2004-07-25  Will Duquette  <will@wjduquette.com>

	* snit.tcl 	Renamed some procs for clarity, and repaired some
	* roadmap.txt   omissions in roadmap.txt.  Added "cget" command
	* snit.test     caching for additional speed-up.
	* dictionary.txt

2004-07-24  Will Duquette  <will@wjduquette.com>

	* snit.tcl      (::snit::RT.MethodCacheLookup): The cached command
	        	is now generated as a list, not a string; this
			improves the speed of method invocation by quite a 
			bit.

2004-07-24  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Consolidated the option typevariables into a
	* dictionary	single array, Snit_optionInfo.  Implemented
	* roadmap.txt	parsing of the new option definition syntax;
	* snit.test	the -validatemethod, -configuremethod, and
			-cgetmethod options as yet have no effect.
			Added tests to ensure that the 'option' and
			'delegate option' statements populate
			Snit_optionInfo properly.

			Added "starcomp" to the Snit_optionInfo array.
			When "delegate option *" is used, "*" no longer 