@@ -109,8 +109,20 @@ proc cleanup {} {
     cleanupType ::foo
     cleanupType ::bar
     cleanupType ::tail
+    cleanupType ::papers
     cleanupType ::animal
+    cleanupType ::confused-dog
     catch {option clear}
+
+    if {[info commands "spot"] ne ""} {
+        puts "spot not erased!"
+        error "spot not erased!"
+    }
+
+    if {[info commands "fido"] ne ""} {
+        puts "fido not erased!"
+        error "fido not erased!"
+    }
 }
 
 
@@ -263,15 +275,11 @@ test typedestruction-1.1 {type command is deleted} {} {
 } {}
 
 test typedestruction-1.2 {instance commands are deleted} {} {
-    catch {
-        type dog { }
+    type dog { }
 
-        dog create spot
-        dog destroy
-        info command ::spot
-    } result
-    set result
-
+    dog create spot
+    dog destroy
+    info command ::spot
 } {}
 
 test typedestruction-1.3 {type namespace is deleted} {} {
@@ -1013,7 +1021,10 @@ test rename-1.4 {rename to "" deletes an instance even after a rename.} {} {
 test rename-1.5 {creating an object twice destroys the first instance.} {} {
     cleanup
 
-    type dog { }
+    type dog { 
+        # Can't even test this normally.
+        pragma -canreplace yes
+    }
 
     dog fido
     set a [namespace children ::dog]
@@ -1686,6 +1697,10 @@ test option-2.3 {configure -opt returns info, explicit options} {} {
         constructor {args} {
             set papers [papers create $self.papers]
         }
+
+        destructor {
+            catch {$self.papers destroy}
+        }
     }
 
     dog create spot
@@ -1706,7 +1721,12 @@ test option-2.4 {configure -unknownopt} {} {
         constructor {args} {
             set papers [papers create $self.papers]
         }
+
+        destructor {
+            catch {$self.papers destroy}
+        }
     }
+
 
     dog create spot
     catch {spot configure -foo} result
@@ -5669,6 +5689,36 @@ test hasinstances-1.3 {'-hasinstances no' disables implicit object creation.} {
     } result
     set result
 } {"::dog fido" is not defined} 
+
+#-----------------------------------------------------------------------
+# pragma -canreplace
+
+test canreplace-1.1 {By default, "-canreplace no".} {
+    cleanup
+
+    type dog { 
+        # ...
+    }
+
+    catch {
+        dog fido
+        dog fido
+    } result
+    set result
+} {command "::fido" already exists.} 
+
+test canreplace-1.2 {Can replace commands when "-canreplace yes".} {
+    cleanup
+
+    type dog { 
+        pragma -canreplace yes
+    }
+
+    dog fido
+    dog fido
+} {::fido} 
+
+
 
 
 #---------------------------------------------------------------------
